Cleanup logging/conditionals